--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "hbs": "^4.1.1",
-    "mongoose": "^5.10.12"
+    "mongoose": "^5.10.12",
+    "morgan": "^1.10.0"
   }
 }
