--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API REST pour les JO.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
