--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bootstrap": "^4.5.3",
     "express": "^4.17.1",
+    "handlebars-helpers": "^0.10.0",
     "hbs": "^4.1.1",
     "mongoose": "^5.10.12",
     "morgan": "^1.10.0"
