--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "homepage": "https://github.com/AlexisCabrol/jeuxolympiquesjs#readme",
   "dependencies": {
     "bootstrap": "^4.5.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "handlebars-helpers": "^0.10.0",
     "hbs": "^4.1.1",
     "mongoose": "^5.10.12",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "password-hash": "^1.2.2"
   }
 }
